# scrubline

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: bench.rs  demo.sh
src/: allowlist.rs  appconfig.rs  config.rs  detector.rs  engine.rs  entropy.rs  hook.rs  json.rs  keys.rs  lib.rs  logfmt.rs  main.rs  mask.rs  patterns.rs  span.rs
tests/: cli.rs  precision_recall.rs
