[package]
name = "scrubline"
version = "0.1.0"
edition = "2024"
description = "Secrets and PII never leave the pipe. A streaming, structured-log-aware redaction filter."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Leartt1/scrubline"
readme = "README.md"
keywords = ["secrets", "redaction", "logs", "security", "pii"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "scrubline"
path = "src/lib.rs"

[[bin]]
name = "scrubline"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"

[profile.release]
lto = true
strip = true
